--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: 60px;
     grid-template-rows: 60px;
     grid-template-columns: 100px auto 80px 80px 80px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .responsive .difu{
     display: flex;
