--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .responsive {
+    width: 100%;
     display: grid;
     height: 60px;
     grid-template-rows: 60px;
     grid-template-columns: 100px auto 80px 80px 80px;
-    /* border: 1px solid black; */
 }
 .responsive .difu{
     display: flex;
@@ -33,4 +37,13 @@
     justify-content: center;
     border: 1px solid black;
     height: inherit;
+}
+body {
+    background-color: grey;
+}
+.main-body{
+    align-self: center;
+    width: 440px;
+    background-color: white;
+    height: 100%;
 }
