--- a/src/style.css
+++ b/src/style.css
@@ -50,3 +50,11 @@ body {
     background-color: white;
     height: 100%;
 }
+#nav-bar-items a:hover {
+    background-color: blue;
+    color: white;
+}
+.active {
+    background-color: blue;
+    color: white;
+}
