--- a/public/output.css
+++ b/public/output.css
@@ -603,6 +603,38 @@ video {
   border-width: 0;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.-z-20 {
+  z-index: -20;
+}
+
+.-z-30 {
+  z-index: -30;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
 .m-9 {
   margin: 2.25rem;
 }
@@ -763,6 +795,10 @@ video {
   grid-template-columns: 6% 95%;
 }
 
+.grid-cols-\[15\%_85\%\] {
+  grid-template-columns: 15% 85%;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -902,6 +938,16 @@ video {
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
 .p-4 {
