--- a/public/output.css
+++ b/public/output.css
@@ -615,48 +615,37 @@ video {
   position: relative;
 }
 
-.-z-10 {
-  z-index: -10;
+.top-20 {
+  top: 5rem;
 }
 
-.z-10 {
-  z-index: 10;
+.left-10 {
+  left: 2.5rem;
 }
 
-.-z-20 {
-  z-index: -20;
+.top-28 {
+  top: 7rem;
 }
 
-.-z-30 {
-  z-index: -30;
+.top-32 {
+  top: 8rem;
 }
 
-.z-30 {
-  z-index: 30;
+.top-36 {
+  top: 9rem;
 }
 
-.m-9 {
-  margin: 2.25rem;
+.left-8 {
+  left: 2rem;
+}
+
+.left-6 {
+  left: 1.5rem;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.my-9 {
-  margin-top: 2.25rem;
-  margin-bottom: 2.25rem;
 }
 
 .mr-3 {
@@ -671,12 +660,12 @@ video {
   margin-top: 1rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.ml-10 {
+  margin-left: 2.5rem;
 }
 
-.mb-9 {
-  margin-bottom: 2.25rem;
+.ml-20 {
+  margin-left: 5rem;
 }
 
 .block {
@@ -699,104 +688,96 @@ video {
   display: none;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-7 {
   height: 1.75rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .h-8 {
   height: 2rem;
 }
 
-.max-h-60 {
-  max-height: 15rem;
+.h-80 {
+  height: 20rem;
 }
 
-.w-6 {
-  width: 1.5rem;
+.h-40 {
+  height: 10rem;
 }
 
-.w-full {
-  width: 100%;
+.h-6 {
+  height: 1.5rem;
 }
 
-.w-10 {
-  width: 2.5rem;
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[420px\] {
+  height: 420px;
+}
+
+.h-\[35rem\] {
+  height: 35rem;
+}
+
+.h-\[39rem\] {
+  height: 39rem;
+}
+
+.h-\[36rem\] {
+  height: 36rem;
+}
+
+.h-\[32rem\] {
+  height: 32rem;
+}
+
+.h-\[30rem\] {
+  height: 30rem;
+}
+
+.h-\[26rem\] {
+  height: 26rem;
+}
+
+.h-\[25rem\] {
+  height: 25rem;
+}
+
+.max-h-\[28rem\] {
+  max-height: 28rem;
 }
 
 .w-8 {
   width: 2rem;
 }
 
-.grid-cols-\[500px\] {
-  grid-template-columns: 500px;
+.w-full {
+  width: 100%;
 }
 
-.grid-cols-\[500px_1fr\] {
-  grid-template-columns: 500px 1fr;
+.w-60 {
+  width: 15rem;
 }
 
-.grid-cols-\[1fr_100\%\] {
-  grid-template-columns: 1fr 100%;
+.w-6 {
+  width: 1.5rem;
 }
 
-.grid-cols-\[1fr_350px\] {
-  grid-template-columns: 1fr 350px;
+.w-52 {
+  width: 13rem;
 }
 
-.grid-cols-\[20px_350px\] {
-  grid-template-columns: 20px 350px;
-}
-
-.grid-cols-\[20px_400pxpx\] {
-  grid-template-columns: 20px 400pxpx;
-}
-
-.grid-cols-\[20px_400px\] {
-  grid-template-columns: 20px 400px;
-}
-
-.grid-cols-\[20px_420px\] {
-  grid-template-columns: 20px 420px;
-}
-
-.grid-cols-\[20px_410px\] {
-  grid-template-columns: 20px 410px;
-}
-
-.grid-cols-\[10\%_89\%\] {
-  grid-template-columns: 10% 89%;
-}
-
-.grid-cols-\[10\%_90\%\] {
-  grid-template-columns: 10% 90%;
-}
-
-.grid-cols-\[6\%_94\%\] {
-  grid-template-columns: 6% 94%;
-}
-
-.grid-cols-\[6\%_95\%\] {
-  grid-template-columns: 6% 95%;
+.w-72 {
+  width: 18rem;
 }
 
 .grid-cols-\[15\%_85\%\] {
   grid-template-columns: 15% 85%;
+}
+
+.grid-cols-\[6\%_94\%\] {
+  grid-template-columns: 6% 94%;
 }
 
 .flex-col {
@@ -829,6 +810,10 @@ video {
   align-self: center;
 }
 
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -841,10 +826,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -855,6 +836,10 @@ video {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-r-2 {
@@ -880,6 +865,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
@@ -895,75 +885,37 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-blue-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-blue-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
-}
-
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
-.bg-blue-900 {
+.bg-green-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
-.bg-green-400 {
+.bg-blue-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-purple-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
 }
 
 .p-4 {
   padding: 1rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-2 {
@@ -974,31 +926,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .px-4 {
@@ -1016,6 +943,10 @@ video {
   padding-right: 1.5rem;
 }
 
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1024,8 +955,60 @@ video {
   padding-left: 0.75rem;
 }
 
-.pl-1 {
-  padding-left: 0.25rem;
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-28 {
+  padding-left: 7rem;
+}
+
+.pl-32 {
+  padding-left: 8rem;
+}
+
+.pl-40 {
+  padding-left: 10rem;
+}
+
+.pl-48 {
+  padding-left: 12rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-40 {
+  padding-top: 10rem;
+}
+
+.pl-56 {
+  padding-left: 14rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
+}
+
+.pt-44 {
+  padding-top: 11rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pt-28 {
+  padding-top: 7rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .text-left {
@@ -1039,11 +1022,6 @@ video {
 
 .text-xl {
   font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -1065,34 +1043,19 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-slate-100 {
-  --tw-text-opacity: 1;
-  color: rgb(241 245 249 / var(--tw-text-opacity));
-}
-
-.text-slate-300 {
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1177,28 +1140,14 @@ body {
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:p-2:hover {
-  padding: 0.5rem;
-}
-
-.hover\:px-5:hover {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.hover\:py-1:hover {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:py-2:hover {
@@ -1211,14 +1160,14 @@ body {
   padding-right: 1.5rem;
 }
 
-.hover\:text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
