--- a/public/output.css
+++ b/public/output.css
@@ -603,10 +603,6 @@ video {
   border-width: 0;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -615,32 +611,28 @@ video {
   position: relative;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.top-32 {
-  top: 8rem;
+.left-6 {
+  left: 1.5rem;
 }
 
 .top-36 {
   top: 9rem;
 }
 
-.left-8 {
-  left: 2rem;
+.top-32 {
+  top: 8rem;
 }
 
-.left-6 {
-  left: 1.5rem;
+.top-28 {
+  top: 7rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-20 {
+  top: 5rem;
 }
 
 .mx-auto {
@@ -658,14 +650,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
 }
 
 .block {
@@ -696,56 +680,20 @@ video {
   height: 2rem;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[420px\] {
-  height: 420px;
-}
-
-.h-\[35rem\] {
-  height: 35rem;
-}
-
-.h-\[39rem\] {
-  height: 39rem;
-}
-
-.h-\[36rem\] {
-  height: 36rem;
-}
-
-.h-\[32rem\] {
-  height: 32rem;
-}
-
 .h-\[30rem\] {
   height: 30rem;
-}
-
-.h-\[26rem\] {
-  height: 26rem;
 }
 
 .h-\[25rem\] {
   height: 25rem;
 }
 
-.max-h-\[28rem\] {
-  max-height: 28rem;
+.h-80 {
+  height: 20rem;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .w-8 {
@@ -756,20 +704,12 @@ video {
   width: 100%;
 }
 
-.w-60 {
-  width: 15rem;
+.w-72 {
+  width: 18rem;
 }
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-72 {
-  width: 18rem;
 }
 
 .grid-cols-\[15\%_85\%\] {
@@ -810,6 +750,10 @@ video {
   align-self: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -836,10 +780,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-4 {
-  border-width: 4px;
 }
 
 .border-r-2 {
@@ -890,19 +830,14 @@ video {
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
+.bg-purple-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
 }
 
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-}
-
-.bg-purple-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -928,6 +863,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -936,11 +876,6 @@ video {
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .pl-1 {
@@ -955,52 +890,8 @@ video {
   padding-left: 0.75rem;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-28 {
-  padding-left: 7rem;
-}
-
-.pl-32 {
-  padding-left: 8rem;
-}
-
-.pl-40 {
-  padding-left: 10rem;
-}
-
-.pl-48 {
-  padding-left: 12rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pt-40 {
-  padding-top: 10rem;
-}
-
 .pl-56 {
   padding-left: 14rem;
-}
-
-.pt-36 {
-  padding-top: 9rem;
-}
-
-.pt-44 {
-  padding-top: 11rem;
-}
-
-.pt-32 {
-  padding-top: 8rem;
 }
 
 .pt-28 {
@@ -1114,7 +1005,7 @@ body {
   align-self: center;
   width: 440px;
   background-color: white;
-  height: 100%;
+  height: 580px;
 }
 
 #nav-bar-items a:hover {
