--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@ body {
     align-self: center;
     width: 440px;
     background-color: white;
-    height: 100%;
+    height: 580px;
 }
 #nav-bar-items a:hover {
     background-color: blue;
